# k8s-study

./: README.md
hello-app/: Dockerfile  main.py
k8s/: hpa.yml  pod.yaml  secret.yml
k8s/current/: configmap-env.yml  configmap-txt.yml  deployment.yml  pvc.yml  service.yml  statefulset.yml
k8s/namespaces/: deployment.yml
k8s/study/: replicaset.yml
tickera/: main.py  pyproject.toml
tickera/models/: event.py  location.py  player.py  situation.py  stats.py  westick.py
