[tool.poetry]
name = "tickera"
version = "0.1.0"
description = ""
authors = ["Gabriel Minoru <gabrielikenaga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
magentic = "^0.9.1"
pydantic = "^2.4.2"
uuid = "^1.30"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
ruff = "^0.1.5"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "ruff . "
run = "python main.py"
pre_test = "task lint"
test = "pytest -s -x --cov=workbench -vv"
post_test = "coverage html"
